# zim-research-crew

./: .env.example  .gitignore  README.md  chainlit.py  crew.py  intake.example.md  main.py  pyproject.toml  report.md  request.example.md  user-input.example.md
.chainlit/: config.toml
crew/: crew.py
crew/config/: agents.yaml  tasks.yaml
crew/tools/: __init__.py  document_chunk_context.py  document_chunk_range_retriever.py  document_search.py  workspace_file_read.py  workspace_file_write.py  workspace_read_tool.py  workspace_writer_tool.py
crew/utils/: chunker.py
files/: input.md
src/project_research_crew/: chainlit.py  crew.py  main.py
src/project_research_crew/config/: agents.yaml  tasks.yaml
