[project]
name = "project_research_crew"
version = "0.1.0"
description = "project-research-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit>=2.8.3",
    "crewai[tools]==1.1.0",
    "qdrant-client>=1.15.1",
]

[project.scripts]
project_research_crew = "project_research_crew.main:run"
run_crew = "project_research_crew.main:run"
train = "project_research_crew.main:train"
replay = "project_research_crew.main:replay"
test = "project_research_crew.main:test"
run_with_trigger = "project_research_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
