[project]
name = "project_research_crew"
version = "0.1.0"
description = "project-research-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chainlit>=2.8.3",
    "crewai-tools[mcp]>=1.1.0",
    "crewai[tools]==1.1.0",
    "docling>=2.58.0",
    "mcp>=1.18.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
]

[tool.crewai]
type = "crew"
